--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -75,12 +75,11 @@ p {
 }
 
 .content {
-  opacity: 0;
   z-index: 2;
 }
 
 .fadein {
-  animation: fadein 0.5s ease-in-out 0.5s forwards;
+  animation: fadein 2s ease-in-out forwards;
 }
 
 .implode {
